modify createComment
